welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:24: error: value Red is not a member of object java.awt.Color
  case 1 => return Color.Red
                         ^